[gd_scene load_steps=34 format=3 uid="uid://xi8ttmjw2lnq"]

[ext_resource type="Script" uid="uid://bdxjgqk8pxjqx" path="res://levels/level.gd" id="1_iybre"]
[ext_resource type="Material" uid="uid://cgvl1lw5d54lu" path="res://shaders/sky_shader.tres" id="3_87pc6"]
[ext_resource type="Script" uid="uid://7q1nnexpgll1" path="res://levels/Camera3D.gd" id="3_l3e54"]
[ext_resource type="PackedScene" uid="uid://cqwy7avwdst37" path="res://player/player_3d.tscn" id="4_ugr5e"]
[ext_resource type="Script" uid="uid://b8vx2ywl2qqbe" path="res://levels/minion_spawner.gd" id="4_vg6ty"]
[ext_resource type="PackedScene" uid="uid://cmygufsqqlspk" path="res://player/player.tscn" id="5_3j2oa"]
[ext_resource type="PackedScene" uid="uid://cwwbhiedio45d" path="res://bullets/circular_bullet_spawner.tscn" id="5_gdobn"]
[ext_resource type="PackedScene" uid="uid://wfshsxlxtdtr" path="res://background/desert_scourge.tscn" id="8_3gq8p"]
[ext_resource type="Texture2D" uid="uid://cncup320fqyak" path="res://images/background/storm_overlay.png" id="9_pa4h4"]
[ext_resource type="PackedScene" uid="uid://vubvil2tip1b" path="res://background/grounds/background_dust.tscn" id="9_ta7ci"]
[ext_resource type="Script" uid="uid://djvfmjfcjcb6p" path="res://levels/ground_spawner.gd" id="10_72m2t"]
[ext_resource type="PackedScene" uid="uid://buxjqbs66o43b" path="res://player/health_bar.tscn" id="12_3x685"]
[ext_resource type="FontFile" uid="uid://n3j6orvlkn48" path="res://font/editundo.ttf" id="15_l4yn0"]
[ext_resource type="Texture2D" uid="uid://syi6hfc84kil" path="res://images/ui/title.png" id="16_dksbs"]
[ext_resource type="Texture2D" uid="uid://biqfs0v3j5qvv" path="res://images/ui/MusicNote.png" id="16_jtg5h"]
[ext_resource type="Texture2D" uid="uid://eokrh6jokh5h" path="res://images/background/dust_particle.png" id="16_lh335"]
[ext_resource type="Texture2D" uid="uid://dareathyr0erf" path="res://images/ui/pause_overay.png" id="18_aifma"]

[sub_resource type="Sky" id="Sky_lon1b"]
sky_material = ExtResource("3_87pc6")

[sub_resource type="Environment" id="Environment_1ffuk"]
background_mode = 2
sky = SubResource("Sky_lon1b")
sdfgi_use_occlusion = true
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0.509804, 0.713726, 1, 1)
fog_density = 1.0
fog_sky_affect = 0.0
fog_depth_begin = 400.0
fog_depth_end = 500.0

[sub_resource type="Theme" id="Theme_v6wvo"]
default_font = ExtResource("15_l4yn0")
default_font_size = 150

[sub_resource type="Theme" id="Theme_2njlr"]
default_font = ExtResource("15_l4yn0")
default_font_size = 50

[sub_resource type="Animation" id="Animation_opptp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_u5j6r"]
resource_name = "fade_in"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e62uk"]
_data = {
&"RESET": SubResource("Animation_opptp"),
&"fade_in": SubResource("Animation_u5j6r")
}

[sub_resource type="Theme" id="Theme_gn5p7"]
default_font = ExtResource("15_l4yn0")
default_font_size = 40

[sub_resource type="Theme" id="Theme_wo1rw"]
default_font = ExtResource("15_l4yn0")
default_font_size = 25

[sub_resource type="Theme" id="Theme_t5xbk"]
default_font = ExtResource("15_l4yn0")
default_font_size = 50

[sub_resource type="Theme" id="Theme_3uuhd"]
default_font = ExtResource("15_l4yn0")
default_font_size = 200

[sub_resource type="Theme" id="Theme_ar7mq"]
default_font = ExtResource("15_l4yn0")
default_font_size = 100

[sub_resource type="Theme" id="Theme_p2k71"]
default_font = ExtResource("15_l4yn0")
default_font_size = 50

[sub_resource type="Animation" id="Animation_5bvmk"]
resource_name = "Level"
length = 255.0
step = 1.0

[sub_resource type="Animation" id="Animation_fuhn3"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0l5wk"]
_data = {
&"Level": SubResource("Animation_5bvmk"),
&"RESET": SubResource("Animation_fuhn3")
}

[node name="level" type="Node2D"]
process_mode = 3
script = ExtResource("1_iybre")
sky_storm_color_1 = Color(0.5, 0.403333, 0.21, 1)
sky_storm_color_2 = Color(0.658824, 0.529412, 0.278431, 1)
exposure = 0.2
metadata/_edit_lock_ = true

[node name="Suns" type="Node" parent="."]

[node name="LightSun" type="DirectionalLight3D" parent="Suns"]
transform = Transform3D(0.418943, -0.741325, 0.524331, -0.274792, 0.446861, 0.851354, -0.865434, -0.500751, -0.0165009, 0, 0, 0)
layers = 7
light_bake_mode = 1
directional_shadow_mode = 0

[node name="VisibleSun" type="DirectionalLight3D" parent="Suns"]
transform = Transform3D(-0.332118, -0.61855, -0.712105, 0.581658, -0.72863, 0.361625, -0.742544, -0.2941, 0.601776, 0, 0, 0)
layers = 3
light_color = Color(1, 0.990167, 0.41, 1)
light_energy = 2.455
directional_shadow_mode = 0
sky_mode = 2

[node name="Viewports" type="Node" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Viewports"]
process_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="Viewports/SubViewportContainer"]
handle_input_locally = false
canvas_cull_mask = 4294967293
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Viewports/SubViewportContainer/SubViewport"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 115.707, 0, 0)
cull_mask = 1
current = true
far = 1017.25
script = ExtResource("3_l3e54")
shakeStrength = 2.0
fade = 1.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="Viewports/SubViewportContainer/SubViewport"]
environment = SubResource("Environment_1ffuk")

[node name="Player3D" parent="Viewports/SubViewportContainer/SubViewport" instance=ExtResource("4_ugr5e")]

[node name="Player" parent="Viewports/SubViewportContainer/SubViewport" node_paths=PackedStringArray("player3D") instance=ExtResource("5_3j2oa")]
position = Vector2(960, 540)
player3D = NodePath("../Player3D")

[node name="DesertScourge" parent="Viewports/SubViewportContainer/SubViewport" instance=ExtResource("8_3gq8p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -60, 0, 327.743)
activated = false

[node name="GameElements" type="Node2D" parent="Viewports/SubViewportContainer/SubViewport"]
metadata/_edit_lock_ = true

[node name="Bullets" type="Node2D" parent="Viewports/SubViewportContainer/SubViewport/GameElements"]

[node name="minion_spawner" type="Node" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets"]
script = ExtResource("4_vg6ty")
activated = false

[node name="Timer" type="Timer" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets/minion_spawner"]
autostart = true

[node name="HeadSpawner" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="BodySpawner1" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
offset = 1
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="BodySpawner2" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
offset = 2
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="BodySpawner3" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
offset = 3
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="BodySpawner4" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
offset = 4
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="BodySpawner5" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
offset = 5
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="BodySpawner6" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
offset = 6
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="BodySpawner7" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
offset = 7
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="BodySpawner8" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
offset = 8
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="BodySpawner9" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
offset = 9
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="BodySpawner10" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
offset = 10
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="TailSpawner" parent="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets" instance=ExtResource("5_gdobn")]
direction = Vector2(0, 1)
offset = 11
delay = 12.0
count = 12
is_targeting = true
bullet_path = "res://background/bullet/teeth.tscn"
bullet_type = "bullet"
bullet_dimension = "3D"

[node name="background_dust" parent="Viewports" instance=ExtResource("9_ta7ci")]
position = Vector2(960, 959.955)
scale = Vector2(19.199, 19.199)

[node name="SubViewportContainer3" type="SubViewportContainer" parent="Viewports"]
process_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport2" type="SubViewport" parent="Viewports/SubViewportContainer3"]
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4293918722
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Viewports/SubViewportContainer3/SubViewport2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 115.707, 0, 0)
cull_mask = 4
current = true
far = 1017.25
script = ExtResource("3_l3e54")
shakeStrength = 2.0
fade = 1.0

[node name="SubViewportContainer2" type="SubViewportContainer" parent="Viewports"]
process_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport2" type="SubViewport" parent="Viewports/SubViewportContainer2"]
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4293918722
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Viewports/SubViewportContainer2/SubViewport2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
cull_mask = 2
projection = 1
current = true
fov = 60.0
size = 320.0
far = 1000.0
script = ExtResource("3_l3e54")
shakeStrength = 2.0
fade = 1.0

[node name="StormOverlay" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
top_level = true
position = Vector2(960, 540)
texture = ExtResource("9_pa4h4")
metadata/_edit_lock_ = true

[node name="UI" type="Node" parent="."]

[node name="UI_Above_Player" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="WarningText" type="Control" parent="UI/UI_Above_Player"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 195.0
offset_right = 3.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Title" type="RichTextLabel" parent="UI/UI_Above_Player/WarningText"]
layout_mode = 0
offset_left = -11.0
offset_top = -28.0
offset_right = 1901.0
offset_bottom = 143.0
theme = SubResource("Theme_v6wvo")
text = "         WARNING!"
metadata/_edit_lock_ = true

[node name="TextEdit" type="RichTextLabel" parent="UI/UI_Above_Player/WarningText"]
layout_mode = 0
offset_left = 224.0
offset_top = 217.0
offset_right = 1707.0
offset_bottom = 747.0
theme = SubResource("Theme_2njlr")
text = "	This game contains flashing lights, and may not be suitable for those who suffer from photosensitive epilepsy.



	             Press enter to continue"
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/UI_Above_Player/WarningText"]
libraries = {
&"": SubResource("AnimationLibrary_e62uk")
}
autoplay = "fade_in"

[node name="main menu" type="Control" parent="UI/UI_Above_Player"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="instructions" type="RichTextLabel" parent="UI/UI_Above_Player/main menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 48.125
anchor_bottom = 27.3
offset_left = -102.0
offset_top = 628.0
offset_right = -110.0
offset_bottom = 409.0
theme = SubResource("Theme_gn5p7")
text = "		*WASD/arrow keys to move
		*Shift to slow down movement
		*Space to dash. You are invulnerable while dashing. The dash has a cooldown
		*You have 6 HP, and you regenerate any lost health
		*While playing, esc/p to pause
		*The blue circle is your hitbox
		*Settings are in the bottom-right		
		*Press enter to begin
		*Have fun!"

[node name="TextureRect" type="TextureRect" parent="UI/UI_Above_Player/main menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 373.0
offset_top = -65.0
offset_right = 1573.0
offset_bottom = 635.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.950215, 0.950215)
texture = ExtResource("16_dksbs")

[node name="CheckButton" type="CheckBox" parent="UI/UI_Above_Player/main menu"]
layout_mode = 0
offset_left = 1697.0
offset_top = 994.0
offset_right = 1880.0
offset_bottom = 1047.0
theme = SubResource("Theme_wo1rw")
text = "Infinite lives"

[node name="quit_button" type="Button" parent="UI/UI_Above_Player/main menu"]
layout_mode = 0
offset_left = 40.0
offset_top = 996.0
offset_right = 182.0
offset_bottom = 1049.0
theme = SubResource("Theme_t5xbk")
text = "QUIT"

[node name="UI_Below_Player" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="pause menu" type="Control" parent="UI/UI_Below_Player"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="PauseOveray" type="Sprite2D" parent="UI/UI_Below_Player/pause menu"]
position = Vector2(960, 540)
texture = ExtResource("18_aifma")

[node name="TextEdit" type="RichTextLabel" parent="UI/UI_Below_Player/pause menu"]
layout_mode = 0
offset_left = 565.0
offset_top = 155.0
offset_right = 1406.0
offset_bottom = 342.0
theme = SubResource("Theme_3uuhd")
text = " PAUSED"

[node name="Retry Button" type="Button" parent="UI/UI_Below_Player/pause menu"]
layout_mode = 0
offset_left = 657.0
offset_top = 432.0
offset_right = 1259.0
offset_bottom = 600.0
theme = SubResource("Theme_ar7mq")
text = "RETRY"

[node name="Main Menu Button" type="Button" parent="UI/UI_Below_Player/pause menu"]
layout_mode = 0
offset_left = 657.0
offset_top = 640.0
offset_right = 1259.0
offset_bottom = 808.0
theme = SubResource("Theme_ar7mq")
text = "MAIN MENU"

[node name="Game Over Screen" type="Control" parent="UI/UI_Below_Player"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="PauseOveray" type="Sprite2D" parent="UI/UI_Below_Player/Game Over Screen"]
position = Vector2(960, 540)
texture = ExtResource("18_aifma")

[node name="TextEdit" type="RichTextLabel" parent="UI/UI_Below_Player/Game Over Screen"]
layout_mode = 0
offset_left = 482.0
offset_top = 165.0
offset_right = 1504.0
offset_bottom = 352.0
theme = SubResource("Theme_3uuhd")
text = "GAME OVER"

[node name="Retry Button" type="Button" parent="UI/UI_Below_Player/Game Over Screen"]
layout_mode = 0
offset_left = 657.0
offset_top = 432.0
offset_right = 1259.0
offset_bottom = 600.0
theme = SubResource("Theme_ar7mq")
text = "RETRY"

[node name="Main Menu Button" type="Button" parent="UI/UI_Below_Player/Game Over Screen"]
layout_mode = 0
offset_left = 657.0
offset_top = 640.0
offset_right = 1259.0
offset_bottom = 808.0
theme = SubResource("Theme_ar7mq")
text = "MAIN MENU"

[node name="ending screen" type="Control" parent="UI/UI_Below_Player"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Title" type="Sprite2D" parent="UI/UI_Below_Player/ending screen"]
modulate = Color(1, 1, 1, 0)
position = Vector2(971, 198)
scale = Vector2(0.757143, 0.757143)
texture = ExtResource("16_dksbs")
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="UI/UI_Below_Player/ending screen"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 727.0
offset_top = 401.0
offset_right = 1655.0
offset_bottom = 503.0
theme = SubResource("Theme_p2k71")
text = "CREATED BY AZZLUL"
metadata/_edit_lock_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="UI/UI_Below_Player/ending screen"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 715.0
offset_top = 448.0
offset_right = 1227.0
offset_bottom = 502.0
theme = SubResource("Theme_p2k71")
text = "THANKS FOR PLAYING!"
metadata/_edit_lock_ = true

[node name="RichTextLabel3" type="RichTextLabel" parent="UI/UI_Below_Player/ending screen"]
visible = false
layout_mode = 0
offset_left = 700.0
offset_top = 503.0
offset_right = 1212.0
offset_bottom = 557.0
theme = SubResource("Theme_p2k71")
metadata/_edit_lock_ = true

[node name="Retry Button" type="Button" parent="UI/UI_Below_Player/ending screen"]
visible = false
layout_mode = 0
offset_left = 649.0
offset_top = 560.0
offset_right = 1251.0
offset_bottom = 728.0
theme = SubResource("Theme_ar7mq")
text = "RETRY"
metadata/_edit_lock_ = true

[node name="Main Menu Button" type="Button" parent="UI/UI_Below_Player/ending screen"]
visible = false
layout_mode = 0
offset_left = 649.0
offset_top = 768.0
offset_right = 1251.0
offset_bottom = 936.0
theme = SubResource("Theme_ar7mq")
text = "MAIN MENU"
metadata/_edit_lock_ = true

[node name="HSlider" type="HSlider" parent="UI/UI_Below_Player"]
visible = false
layout_mode = 0
offset_left = 1556.0
offset_top = 928.0
offset_right = 1894.0
offset_bottom = 996.0
max_value = 1.0
step = 0.001
value = 1.0
metadata/_edit_lock_ = true

[node name="MusicNote" type="Sprite2D" parent="UI/UI_Below_Player/HSlider"]
position = Vector2(-20, 32)
scale = Vector2(1.7, 1.7)
texture = ExtResource("16_jtg5h")

[node name="health_bar" type="Control" parent="UI/UI_Below_Player"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="health_bar" parent="UI" instance=ExtResource("12_3x685")]
position = Vector2(112, 969)

[node name="foreground_dust" type="CPUParticles2D" parent="UI"]
position = Vector2(0, 540)
emitting = false
amount = 500
texture = ExtResource("16_lh335")
lifetime = 50.0
speed_scale = 10.0
emission_shape = 3
emission_rect_extents = Vector2(1, 800)
direction = Vector2(1, 0.2)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 100.0
linear_accel_min = 1.0
linear_accel_max = 10.0
scale_amount_min = 0.1
color = Color(1, 1, 1, 0.32549)

[node name="AudioAnimation" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioAnimation"]
process_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="AudioAnimation"]
process_mode = 1
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_0l5wk")
}

[node name="GroundSpawner" type="Node" parent="."]
script = ExtResource("10_72m2t")

[node name="GroundSpawnTimer" type="Timer" parent="GroundSpawner"]
wait_time = 1.3

[connection signal="timeout" from="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets/minion_spawner/Timer" to="Viewports/SubViewportContainer/SubViewport/GameElements/Bullets/minion_spawner" method="_on_timer_timeout"]
[connection signal="toggled" from="UI/UI_Above_Player/main menu/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="UI/UI_Above_Player/main menu/quit_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/UI_Below_Player/pause menu/Retry Button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="UI/UI_Below_Player/pause menu/Main Menu Button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="UI/UI_Below_Player/Game Over Screen/Retry Button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="UI/UI_Below_Player/Game Over Screen/Main Menu Button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="UI/UI_Below_Player/ending screen/Retry Button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="UI/UI_Below_Player/ending screen/Main Menu Button" to="." method="_on_main_menu_button_pressed"]
[connection signal="value_changed" from="UI/UI_Below_Player/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="timeout" from="GroundSpawner/GroundSpawnTimer" to="GroundSpawner" method="_on_ground_spawn_timer_timeout"]
